--- a/static/index.html
+++ b/static/index.html
@@ -1,42 +1,107 @@
-<html>
+<html ng-app='grapher'>
 <head>
   <script src="/static/dygraph-combined.js"></script>
+  <script src="/static/angular.js"></script>
+  <script src="/static/angular-route.js"></script>
   <title>Quick and dirty viewer for power meter data.</title>
   <style>
     html, body { width:100%; height:100%; margin:0; }
+    div.graph {padding:20px;}
+    .selected { font-weight: bold; }
   </style>
+  <script>
+    angular.module('grapher', ['ngRoute'])
+      .config(function($routeProvider) {
+        $routeProvider
+        .when('/', {
+          templateUrl: 'label_view.html',
+          controller: 'LabelView',
+        })
+        .when('/graph/:label_id', {
+          templateUrl: 'graph_view.html',
+          controller: 'GraphView'
+        })
+        .otherwise({
+          redirectTo: '/'
+        });
+      })
+      .controller('MainController', function($scope, $route, $routeParams, $http) {
+        $scope.labels = [];
+        $http.get('/data/labels.json')
+          .success(function(data) { $scope.labels = data; console.log(data); })
+          .error(function(data, status) { alert("Error loading labels: " + status); });
+        $scope.duration = '1w';
+      })
+      .controller('LabelView', function($scope, $route, $routeParams) {
+      })
+      .controller('GraphView', function($scope, $route, $routeParams) {
+        var label_id = $routeParams.label_id;
+        var drawGraph = function(div_id, title, url, yaxis) {
+          new Dygraph(
+            document.getElementById(div_id), url,
+            { 
+              title: title,
+              ylabel: yaxis,
+              axes: {
+                x: { 
+                  pixelsPerLabel: 70,
+                  axisLabelFontSize: 13,
+                  axisLabelFormatter: function(x) { return Dygraph.dateString_(x*1000); },
+                  valueFormatter: function(x) { return Dygraph.dateString_(x*1000); },
+                },
+                y: {
+                  includeZero: true
+                }
+              },
+              errorBars: true,
+              gridLineWidth: 0.5,
+            });
+        }
+        var titles = {
+          'efergy': 'Household Power Usage',
+          '10461765': 'Upstairs Temperature'
+        };
+        var yaxes = {
+          'efergy': 'kW',
+          '10461765': 'C'
+        };
+        if (yaxes[label_id] !== undefined) {
+          $scope.$watch(function() { return $scope.duration }, function() {
+          drawGraph('graph',
+                    titles[label_id], 
+                    '/data/' + label_id + '?duration=' + $scope.duration,
+                    yaxes[label_id]);
+          });
+        }
+      })
+  </script>
+  <script type="text/ng-template" id="label_view.html">
+    <h2>Labels</h2>
+    <div style="padding:8px;">
+      Time series:
+      <div ng-repeat="(k,v) in labels">
+        <div><a href="#/graph/{{v}}">{{v}}</a></div>
+      </div>
+    </div>
+  </script>
+  <script type="text/ng-template" id="graph_view.html">
+    <div style="position:fixed;bottom:0px;right:0px;height:24px;padding:8px 8px 0 8px;border-top:1px solid #888; border-left:1px solid #888;">
+      Duration: 
+      <a ng-class="{selected:duration=='30d'}" ng-click="duration='30d'">30d</a> |
+      <a ng-class="{selected:duration=='1w'}" ng-click="duration='1w'">1w</a> |
+      <a ng-class="{selected:duration=='1d'}" ng-click="duration='1d'">1d</a> |
+      <a ng-class="{selected:duration=='1h'}" ng-click="duration='1h'">1h</a>
+    </div>
+    <h2>{{label_id}}</h2>
+    <hr>
+    <div class="graph"><div id="graph" style="width:800px; height:400px;"></div></div>
+    <h2>{{label}}</h2>
+    <hr>
+  </script>
 </head>
 <body>
-  <div><div id="graphdiv"></div></div>
-  <script type="text/javascript">
-    var resize = function(event) {
-      var elem = document.getElementById('graphdiv');
-      elem.style.width = (window.innerWidth - 20) + 'px';
-      elem.style.height = (window.innerHeight - 50) + 'px';
-    };
-    window.onresize = resize;
-    resize();
-    var graph = new Dygraph(
-        document.getElementById('graphdiv'),
-        '/data.csv',
-        { 
-          title: "Household Power Usage",
-          ylabel: "kW",
-          axes: {
-            x: { 
-              pixelsPerLabel: 70,
-              axisLabelFontSize: 13,
-              axisLabelFormatter: function(x) { return Dygraph.dateString_(x*1000); },
-              valueFormatter: function(x) { return Dygraph.dateString_(x*1000); },
-            },
-            y: {
-              includeZero: true
-            }
-          },
-          rollPeriod: 5,
-          errorBars: true,
-          gridLineWidth: 0.5,
-        });
-  </script>
+  <div ng-controller="MainController">
+    <div ng-view></div>
+  </div>
 </body>
 </html>
