Fix trivial mistake.

--- a/static/index.html
+++ b/static/index.html
@@ -137,7 +137,7 @@
   <script type="text/ng-template" id="graph_view.html">
     <h2>{{title}}</h2>
     <hr>
-    <div><a href="javascript:void()" ng-click="top()">Top</a></div>
+    <div><a href="javascript:void(0)" ng-click="top()">Top</a></div>
     <div class="graph"><div id="graph" style="width:800px; height:400px;"></div></div>
   </script>
 </head>
